--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,22 +1,23 @@
 <h2>Validaciones Reactivas</h2>
-<hr>
+<hr />
 
 <div class="row">
   <div class="col">
-
-    <form autocomplete="off">
-
+    <form autocomplete="off" [formGroup]="formGroup" (submit)="onSubmit()">
       <!-- Nombre -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
-          <input type="text"
-                 class="form-control"
-                 placeholder="Nombre del usuario">
+          <input
+            type="text"
+            formControlName="name"
+            class="form-control"
+            placeholder="Nombre del usuario"
+          />
 
-          <span class="form-text text-danger">
-                        Debe de ser en formato de nombre y apellido
-                    </span>
+          <span *ngIf="isInvalidField('name')" class="form-text text-danger">
+            Debe de ser en formato de nombre y apellido
+          </span>
         </div>
       </div>
 
@@ -24,12 +25,15 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
-          <input type="email"
-                 class="form-control"
-                 placeholder="Email del usuario">
-          <span class="form-text text-danger">
-                        mensaje de error del email
-                    </span>
+          <input
+            type="email"
+            class="form-control"
+            formControlName="email"
+            placeholder="Email del usuario"
+          />
+          <span *ngIf="isInvalidField('email')" class="form-text text-danger">
+            mensaje de error del email
+          </span>
         </div>
       </div>
 
@@ -37,12 +41,15 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
-          <input type="text"
-                 class="form-control"
-                 placeholder="Nombre código del usuario">
-          <span class="form-text text-danger">
-                         El username no puede ser Strider
-                    </span>
+          <input
+            type="text"
+            formControlName="username"
+            class="form-control"
+            placeholder="Nombre código del usuario"
+          />
+          <span *ngIf="isInvalidField('username')" class="form-text text-danger">
+            This username is not available
+          </span>
         </div>
       </div>
 
@@ -50,13 +57,16 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
-          <input type="password"
-                 class="form-control"
-                 placeholder="Password de su cuenta">
+          <input
+            type="password"
+            formControlName="password"
+            class="form-control"
+            placeholder="Password de su cuenta"
+          />
 
           <span class="form-text text-danger">
-                         La contraseña debe de ser mayor de 6 caracteres.
-                    </span>
+            La contraseña debe de ser mayor de 8 caracteres.
+          </span>
         </div>
       </div>
 
@@ -64,50 +74,46 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Confirmar</label>
         <div class="col-sm-9">
-          <input type="password"
-                 class="form-control"
-                 placeholder="Confirmar la contraseña">
+          <input
+            type="password"
+            formControlName="confirmPassword"
+            class="form-control"
+            placeholder="Confirmar la contraseña"
+          />
 
           <span class="form-text text-danger">
-                         Las contraseñas deben de ser iguales
-                    </span>
+            Las contraseñas deben de ser iguales
+          </span>
         </div>
       </div>
-
 
       <div class="row">
         <div class="col">
-          <button class="btn btn-primary float-end"
-                  type="submit">
-            Crear
+          <button class="btn btn-primary float-end" type="submit">
+            Submit
           </button>
         </div>
       </div>
-
-
     </form>
   </div>
 </div>
 
-
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
-<h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-
-<h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<div class="row">
+  <div class="col">
+    <div>Form Valid: {{ formGroup.valid }}</div>
+    <div>Form Status: {{ formGroup.status }}</div>
+    <div>Form Pending: {{ formGroup.pending }}</div>
+    <div>Form Pristine: {{ formGroup.pristine }}</div>
+    <div>Form errors</div>
+    <pre>{{ formGroup.errors | json }}</pre>
+  </div>
+  <div class="col">
+    <h5>Value</h5>
+    <pre>{{ formGroup.value | json }}</pre>
+  </div>
+  <div class="col">
+    <pre>username {{ formGroup.controls["username"].errors | json }}</pre>
+    <pre>email {{ formGroup.controls["email"].errors | json }}</pre>
+    <pre>name {{ formGroup.controls["name"].errors | json }}</pre>
+  </div>
+</div>
