--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -1,24 +1,23 @@
 <h2>Reactivos: Básicos</h2>
-<hr>
+<hr />
 
 <div class="row">
   <div class="col">
-
-    <form autocomplete="off">
-
+    <form [formGroup]="formGroup" (submit)="onSave()" autocomplete="off">
       <!-- Campo de producto -->
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Producto</label>
         <div class="col-sm-9">
+          <input
+            formControlName="name"
+            type="text"
+            class="form-control"
+            placeholder="Nombre del producto"
+          />
 
-          <input type="text"
-                 class="form-control"
-                 placeholder="Nombre del producto">
-
-          <span class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        error message
-                    </span>
+          <span *ngIf="invalidField('name')" class="form-text text-danger">
+            {{ getFieldError("name") }}
+          </span>
         </div>
       </div>
 
@@ -26,12 +25,15 @@
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
-          <input type="number"
-                 class="form-control"
-                 placeholder="Precio del producto">
-          <span class="form-text text-danger">
-                        El precio debe de ser 0 o mayor
-                    </span>
+          <input
+            formControlName="price"
+            type="number"
+            class="form-control"
+            placeholder="Precio del producto"
+          />
+          <span *ngIf="invalidField('price')" class="form-text text-danger">
+            {{ getFieldError("price") }}
+          </span>
         </div>
       </div>
 
@@ -39,55 +41,46 @@
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Existencias</label>
         <div class="col-sm-9">
-          <input type="number"
-                 class="form-control"
-                 placeholder="Existencias del producto">
-
-          <span class="form-text text-danger">
-                         Las existencias deben de ser 0 o mayor
-                    </span>
+          <input
+            formControlName="stock"
+            type="number"
+            class="form-control"
+            placeholder="Existencias del producto"
+          /><span *ngIf="invalidField('stock')" class="form-text text-danger">
+            {{ getFieldError("stock") }}
+          </span>
         </div>
       </div>
 
-
       <div class="row">
         <div class="col">
-          <button type="submit"
-                  class="btn btn-primary float-end">
+          <button type="submit" class="btn btn-primary float-end">
             Guardar
           </button>
         </div>
       </div>
-
-
-
     </form>
-
   </div>
 </div>
 
-
-
-
 <div class="row">
   <div class="col">
-
     <span>Valid</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ "objeto" | json }}</pre>
 
     <span>Pristine</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ "objeto" | json }}</pre>
 
     <span>Touched</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ "objeto" | json }}</pre>
 
     <span>Value</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ "objeto" | json }}</pre>
 
     <span>Precio</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ "objeto" | json }}</pre>
 
     <span>Producto</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ "objeto" | json }}</pre>
   </div>
 </div>
