--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -1,34 +1,32 @@
 <h2>Reactivos: Switches</h2>
-<hr>
+<hr />
 
-
-<form autocomplete="off">
-
+<form autocomplete="off" [formGroup]="formGroup" (submit)="onSubmit()">
   <!-- Radio -->
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Género</label>
     <div class="col-sm-9">
-
       <div class="form-check">
-        <input class="form-check-input"
-               type="radio"
-               value="M"
-               id="radioMasculino">
-        <label class="form-check-label" for="radioMasculino">
-          Masculino
-        </label>
+        <input
+          class="form-check-input"
+          formControlName="gender"
+          type="radio"
+          value="M"
+          id="radioMasculino"
+        />
+        <label class="form-check-label" for="radioMasculino"> Masculino </label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input"
-               type="radio"
-               value="F"
-               id="radioFemenino">
-        <label class="form-check-label" for="radioFemenino">
-          Femenino
-        </label>
+        <input
+          class="form-check-input"
+          formControlName="gender"
+          type="radio"
+          value="F"
+          id="radioFemenino"
+        />
+        <label class="form-check-label" for="radioFemenino"> Femenino </label>
       </div>
-
     </div>
   </div>
 
@@ -36,14 +34,17 @@
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Notificaciones</label>
     <div class="col-sm-9">
-
       <div class="form-check form-switch mt-2">
-        <input class="form-check-input"
-               type="checkbox"
-               id="flexSwitchCheckChecked">
-        <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+        <input
+          class="form-check-input"
+          formControlName="wantsNotifications"
+          type="checkbox"
+          id="flexSwitchCheckChecked"
+        />
+        <label class="form-check-label" for="flexSwitchCheckChecked"
+          >Quiero recibir notificaciones</label
+        >
       </div>
-
     </div>
   </div>
 
@@ -52,44 +53,40 @@
     <label class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
       <div class="form-check">
-        <input class="form-check-input"
-               type="checkbox"
-               id="flexCheckDefault">
+        <input
+          class="form-check-input"
+          formControlName="acceptTermsAndConditions"
+          type="checkbox"
+          id="flexCheckDefault"
+        />
         <label class="form-check-label" for="flexCheckDefault">
           Términos y condiciones de uso
         </label>
       </div>
-      <span class="form-text text-danger">
-                 Debe de aceptar las condiciones de uso
-              </span>
-
+      <span *ngIf="termsNotAccepted()" class="form-text text-danger">
+        Debe de aceptar las condiciones de uso
+      </span>
     </div>
   </div>
-
 
   <!-- Boton submit -->
   <div class="row">
     <div class="col">
-      <button class="btn btn-primary float-end"
-              type="submit">
-        Guardar
-      </button>
+      <button class="btn btn-primary float-end" type="submit">Guardar</button>
     </div>
   </div>
-
 </form>
 
-
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
-<br>
+<pre>{{ formGroup.value | json }}</pre>
+<br />
 
 <h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
-<br>
+<pre>{{ person | json }}</pre>
+<br />
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ formGroup.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
